# AnimeTrack

./: .env.example  .gitignore  AGENTS.md  BUILD_WINDOWS.md  README.md  TODO.md  anime-track-export (1).json  anime-track-export.json  ecosystem.config.js  index.html  middleware.ts  next.config.mjs  nginx-anime.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
app/: globals.css  layout.tsx
components/: Dashboard.tsx  Providers.tsx  SidebarLayout.tsx
data/: animetrack.db  animetrack.db-shm  animetrack.db-wal
database/: schema.sql
desktop/: main.ts  server.ts  tsconfig.json  window.ts
docs/: desktop-development-handoff.md  desktop-packaging-redesign.md  visual-style-guide.md
hooks/: useAnimeData.ts  useCachedFetch.ts  useHistoryData.ts  useRuntimeAccess.ts
lib/: ai-runtime.ts  ai-validation.ts  ai.ts  anime-cast.ts  anime-enrichment.ts  anime-import.ts  anime-preference-insights.ts  anime-provider.ts  anime-shared.ts  anime.ts  api-response.ts  auth.ts  config.ts  cover-batch.ts  cover-image.ts  dashboard-shared.ts  dashboard-types.ts  database-migrations.ts  date-utils.ts  db.ts  env.ts  export-filename.ts  formatters.ts  history.ts  hooks-shared.ts  local-date-time.ts  runtime-mode.ts  runtime-paths.ts  runtime-settings.ts  swr-config.ts  theme.ts  validations.ts
scripts/: import-export.ts  migrate-covers.js  (+2 more)
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secure_storage.rs  storage.rs
src-tauri/wix/: main.wxs
(+138 files in other folders)
